[package]
name = "statushub"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serenity = { version = "0.12.4", default-features = false, features = ["cache", "client", "gateway", "http", "model", "rustls_backend"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
